Sun Sep  3 17:45:30 UTC 2006 / Kjell Claesson <kjell.claesson@telia.com>

 - Add Sola 305 to driver.list.

Fri Aug 25 19:16:01 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: added 050d:0912 to Belkin subdriver
 - scripts/hotplug*: added 050d:0912
 - newhidups: changed Belkin claim() function to accept any device
   if -x productid option is given; otherwise only known devices

Fri Aug 18 16:56:30 UTC 2006 / Kjell Claesson <kjell.claesson@telia.com>

 - Add Inform GUARD ups and Powerware PW9315 to driver.list.

Wed Aug 16 01:28:01 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: restricted matching Belkin devices to ProductID 0980. 

Wed Aug  9 16:28:50 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - libhid debugging: print full report descriptor

 - data/driver.list: added Tripp-Lite 1500 LCD.

Mon Aug  7 20:30:50 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups, mge-shut: changes in debugging code. Reimplemented
   common.h:upsdebug_hex(). Removed dump_hex() in libhid.c and
   mge-shut.c. Removed TRACE() macro. Changed some debugging levels.

 - libusb.c: make sure report length does not exceed buffer size.

 - data/driver.list: added CPS 800AVR, AE550, Tripp-Lite OMNI1000LCD,
   AVR550U.

Sun Aug  6 13:52:45 UTC 2006 / Kjell Claesson <kjell.claesson@telia.com>

 - Changed driver to megatec for PowerMan RealSmart 800 and 1000 in driver.list

Sun Aug  6 04:05:08 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups/libusb: instead of using the maximum of the two report
   descriptor lengths, always use the second value when available (it
   seems to be more reliable). Also, when the report descriptor is
   finally shorter than expected, no longer abort, but live with it
   (this might help on some APC devices).

Sun Aug  6 03:39:19 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups/libusb: attempt to fix Tripp Lite problem: buggy UPS